2013-08-30  Chris Searle  <chris@chrissearle.org>

        * 3.5b14
        * Submitted to Apple

2013-08-30  Chris Searle  <chris@chrissearle.org>

        * Get conference start and end dates from session list if conference doesn't have dates set and if session list isn't empty

2013-08-29  Chris Searle  <chris@chrissearle.org>

        * 3.5b13
        * Conference Detail View from settings (#49, #50)

2013-08-22  Chris Searle  <chris@chrissearle.org>

        * Crashlytics issue 34 - nil append of string (#52)

2013-08-20  Chris Searle  <chris@chrissearle.org>

        * Fix lightning talk slot allocation (#51)

2013-08-15  Chris Searle  <chris@chrissearle.org>

        * 3.4b12
        * Submitted to Apple

2013-08-14  Chris Searle  <chris@chrissearle.org>

        * Try to make logic allocating lightning talk to containing hour more resilient

2013-08-09  Chris Searle  <chris@chrissearle.org>

        * Add video link where present

2013-07-29  Chris Searle  <chris@chrissearle.org>

        * Migrate most externals to cocoapods

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.3b11
        * Don't add calendar share option if session has no time slot
        * Submitted to Apple

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.2b10
        * Update footer after refresh

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.2b9
        * Handle sessions without room or time slot
        * Fix crash on returning to favourites list from detail view after removing last favourite (#46)

2013-07-01  Chris Searle  <chris@chrissearle.org>

        * 3.1b8
        * Branding
        * Submitted to Apple

2013-06-29  Chris Searle  <chris@chrissearle.org>

        * 3.0b7
        * Change to using parent/child managedObjectContexts instead of listeners
        * Detail page navigation buttons
        * About page
        * Empty table footers to prompt user
        * Issues fixed: #18, #43, #44
