@@ -1,3 +1,7 @@
+2013-09-14  Chris Searle  <chris@chrissearle.org>
+
+        * Add language to advanced search (#57)
+
 2013-08-30  Chris Searle  <chris@chrissearle.org>
 
         * 3.5b14
